--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "primevue",
+    "name": "@gerrproger/primevue",
     "version": "3.29.2",
     "homepage": "https://primevue.org/",
     "repository": {
@@ -12,7 +12,7 @@
         "dev": "nuxt dev",
         "generate": "nuxt generate",
         "preview": "nuxt preview",
-        "postinstall": "nuxt prepare",
+        "no:postinstall": "nuxt prepare",
         "build:lib": "npm run build:check && npm run build:package",
         "build:package": "NODE_ENV=production rollup -c && node build-meta && node api-generator/build-api && gulp build-styles",
         "build:check": "npm run format:check && npm run security:check && npm run test:unit",
