--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@gerrproger/primevue",
-    "version": "3.29.2",
+    "version": "3.29.2-1",
     "homepage": "https://primevue.org/",
     "repository": {
         "type": "git",
